# CPP_-Practice

./: .gitignore  Basics.cpp  Basics.h  CPP_ Practice.sln  CPP_ Practice.vcxproj  CPP_ Practice.vcxproj.filters  Conditionals.cpp  Conditionals.h  Main.cpp  Main.h  VariablesAndDataTypes.cpp  VariablesAndDataTypes.h
BankManagementSystem/: CMakeLists.txt  main.cpp
StudentRecordSystem/: main.cpp
TicketBooking/: main.cpp
TicketBookingSystem/: CMakeLists.txt  CMakePresets.json  main.cpp
